# Bot-Trading-IA

./: .gitignore  .vercelignore  AGENTS.md  README_CEREBRO_OPCION_B_ES.md  railway.json  requirements-research.txt  requirements-runtime.txt
rtlab_autotrader/: .env  .env.example  .gitignore  JAVA_21_UPGRADE_PLAN.md  README.md  pyproject.toml  rtlab_config.yaml.example
rtlab_autotrader/docker/: Dockerfile  docker-compose.yml
rtlab_autotrader/rtlab_autotrader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rtlab_autotrader/rtlab_core/: __init__.py  config.py  mode_taxonomy.py  policy_paths.py  runtime_controls.py  types.py
rtlab_autotrader/scripts/: bootstrap_binance_futures_public.py  bootstrap_userdir.sh  download_crypto_binance_public.py  download_data.sh  download_equities_alpaca.py  download_forex_dukascopy.py  report_backtest.sh  run_backtest.sh  run_dryrun.sh  run_live.sh  run_paper.sh  run_testnet.sh  strategy_pack_import.sh
rtlab_autotrader/tests/: test_backend_qa_live.py  test_backtest_annualization.py  test_backtest_catalog_db.py  test_backtest_execution_profiles.py  test_backtest_strategy_dispatch.py  test_binance_catalog_sync.py  test_binance_futures_bootstrap.py  test_binance_instrument_registry.py  test_brain_policy_service.py  test_brain_policy_yaml.py  test_clusters.py  test_cost_providers.py  test_dataset_registry.py  test_dsl_parser.py  test_execution_reality.py  test_fundamentals_credit_filter.py  test_fundamentals_mode_leakage.py  test_gates_policy_source_fail_closed.py  test_instrument_registry_signed_surface.py  (+32 more)
(+2917 files in other folders)
