[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtlab-autotrader"
version = "0.1.0"
description = "RTLab AutoTrader: crypto-first automated trading stack with robust risk controls"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "RTLab" }]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "typer>=0.12",
  "rich>=13.7",
  "lark>=1.1",
  "requests>=2.32",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6"
]
trading = [
  "freqtrade>=2024.9"
]

[project.scripts]
rtbot = "rtlab_core.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rtlab_core*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
